--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
       }
     </style>
-    <title>Document</title>
+    <title>Theme Swapper</title>
   </head>
   <body class="__dark-mode">
     <div class="__mode-indicator">
